src/test/deca/context/invalid/homemade/initializat_diff_types.deca
// Description :
//test of variable initialization with a different type
//
// Resultats :
//Erreur contextuelle
//Ligne <9> : < Type boolean cannot be assigned to type int>
{
   int a = 2;
   boolean b = a;

}